syntax = "proto3";

import "github.com/aipadad/aipa/api/transaction.proto";

package api;

option go_package = "github.com/aipadad/aipa/api";

service Chain{
	rpc SendTransaction(Transaction)returns (SendTransactionResponse){}
	rpc GetTransaction(GetTransactionRequest)returns (GetTransactionResponse){}
	rpc GetBlock(GetBlockRequest)returns (GetBlockResponse){}
	rpc GetInfo(GetInfoRequest)returns (GetInfoResponse){}
	rpc GetAccount(GetAccountRequest)returns (GetAccountResponse){}
	rpc	GetKeyValue(GetKeyValueRequest)returns (GetKeyValueResponse){}
	rpc GetAbi(GetAbiRequest)returns (GetAbiResponse){}
	rpc GetTransferCredit(GetTransferCreditRequest)returns (GetTransferCreditResponse){}
} 


message SendTransactionResponse{
	uint32 				errcode				= 1;
	string 				msg					= 2;
	Result				result 				= 3;
	message Result{
		Transaction 	trx					= 1;
		string 			trx_hash			= 2;
	}
}

message GetTransactionRequest{
	string 				trx_hash			= 1; 
}

message GetTransactionResponse{
	uint32 				errcode				= 1;
	string 				msg					= 2;
	Transaction			result 				= 3;
}


message GetBlockRequest{
	uint64				block_num			= 1;
	string 				block_hash			= 2;
}

message GetBlockResponse{
	uint32 				errcode				= 1;
	string 				msg					= 2;
	Result				result 				= 3;
	message Result{
		string          prev_block_hash     = 1;
        uint64			block_num			= 2;
		string			block_hash      	= 3;
		uint32			cursor_block_label	= 4;
        uint64          block_time          = 5;
        string          trx_merkle_root     = 6;
        string          delegate            = 7;
        string          delegate_sign       = 8;
        repeated Transaction trxs     		= 9;
	}
}

message GetInfoRequest{
}

message GetInfoResponse{
	uint32 				errcode							= 1;
	string 				msg								= 2;
	Result 				result							= 3;
	message Result {
		uint64 			head_block_num					= 1;
		string 			head_block_hash					= 2;
		uint64 			head_block_time					= 3;
		string 			head_block_delegate				= 4;
		uint32			cursor_label					= 5;
		uint64 			last_consensus_block_num		= 6;
		string 			chain_id		                = 7;
	}
}


message GetAccountRequest{
	string 				account_name		= 1;
}

message GetAccountResponse{
	uint32 				errcode				= 1;
	string 				msg					= 2;
	Result 				result				= 3;
	message Result {
		string 			account_name		= 1;
		string			pubkey				= 2;
		string 			balance				= 3;
		string 			staked_balance		= 4;
	}
}

message GetKeyValueRequest{
	string 				contract			= 1;
	string 				object				= 2;
	string 				key					= 3;
}

message GetKeyValueResponse{
	uint32 				errcode				= 1;
	string 				msg					= 2;
	Result 				result				= 3;
	message Result {
		string 			contract			= 1;
		string			object				= 2;
		string 			key					= 3;
		string 			value				= 4;
	}
}

message GetAbiRequest{
	string 				contract			= 1;
}

message GetAbiResponse{
	uint32 				errcode				= 1;
	string 				msg					= 2;
	string 				result				= 3;
}

message GetTransferCreditRequest{
	string 				name				= 1;
	string 				spender				= 2;
}

message GetTransferCreditResponse{
	uint32 				errcode				= 1;
	string 				msg					= 2;
	Result 				result				= 3;
	message Result {
		string 			name				= 1;
		string			spender				= 2;
		string 			limit				= 3;
	}
}

